# wyrm

./: CMakeLists.txt  CMakePresets.json  README.md  install.sh
docs/: manual.md
include/: io.hpp  serialization.hpp  types.hpp
src/: callbacks.cpp  io.cpp  main.cpp  serialization.cpp  types.cpp
wyrm-cpp/: CMakeLists.txt
wyrm-cpp/cmake/: wyrm-cpp-config.cmake.in
wyrm-cpp/idl/: Description.idl  Frame.idl  RigidBodies.idl
wyrm-cpp/idl/geometry_msgs/msg/: Point.idl  Quaternion.idl
wyrm-cpp/include/wyrm/: keys.hpp  serialization.hpp  types.hpp
wyrm-cpp/src/: serialization.cpp
wyrmd/: CMakeLists.txt
wyrmd/include/: context.hpp  io.hpp  net.hpp
wyrmd/src/: context.cpp  io.cpp  main.cpp  net.cpp
wyrmd/tests/: CMakeLists.txt  test_context.cpp  test_net.cpp
wyrmpy/: pyproject.toml
wyrmpy/src/wyrmpy/: __init__.py  _crd_types.py  keys.py  serialization.py  types.py
